--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,7 +1,9 @@
 // Define variables for your color scheme
 
-// For example:
-$red: #FD1015;
+// Comment by Joyce: This is the red color used in Figma.
+// You can use it for headlines, titles or any other important information
+$red: #BE0000;
+
 $blue: #0D6EFD;
 $yellow: #FFC65A;
 $orange: #E67E22;
