--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>HireAssassin</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<%= csrf_meta_tags %>
-		<%= csp_meta_tag %>
-
-		<%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-		<%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
-	</head>
-
-	<body>
-		<%= yield %>
-
-		<p class="notice"><%= notice %></p>
-		<p class="alert"><%= alert %></p>
-	</body>
+  <head>
+    <title>HireAssassin</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
+    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+  </head>
+  <body>
+    <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://cdn.dribbble.com/users/2905071/screenshots/5812870/media/03fc8edd565758998f2411eb713d262a.jpg)">
+      <div class="container">
+        <h1>DEATH DEALERS</h1>
+        <p>UNLEASH THE SHADOWS: EMPOWER YOUR WILL WITH LETHAL PRECISION</p>
+      </div>
+    </div>
+    <%= yield %>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+  </body>
 </html>
