--- a/app/views/assassins/show.html.erb
+++ b/app/views/assassins/show.html.erb
@@ -3,4 +3,4 @@
 <h3>Rate: <%= @assassin.price %>bitcoin(s)💰</h3>
 <p>Some random thing about <%= @assassin.name %> : <br>
   <%= @assassin.description %></p>
-<%= cl_image_tag @assassin.photo.key, height: 300, width: 400, crop: :fill %>
+<%#= cl_image_tag @assassin.photo.key, height: 300, width: 400, crop: :fill %>
