--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -3,6 +3,16 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 30px;
 }
+.small-btn {
+  font-size: small;
+  text-decoration: none;
+  color: black;
+  border: 1px solid black;
+  padding: 3px;
+}
+.small-btn:hover{
+  color: white;
+}
 
 .card-product {
   overflow: hidden;
@@ -10,11 +20,16 @@
   width: 256px;
   background: #d9d9d9;
   box-shadow: 5px 5px 1px rgba(0,0,0,0.2);
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  // display: flex;
+  // align-items: center;
+  // justify-content: center;
 }
-
+.card-product-infos {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  position: relative;
+}
 .card-product img {
   height: 150px;
   width: 235px;
@@ -22,22 +37,22 @@
 }
 
 .card-product h2 {
-  font-size: 16px;
+  font-size: 25px;
   font-weight: bold;
   margin-top: 5px;
   margin-bottom: 5px;
 }
 
 .card-product p {
-  font-size: 12px;
+  font-size: 15px;
   line-height: 1.4;
   opacity: .7;
   margin-bottom: 0;
-  margin-top: 8px;
+  margin-top: 1px;
 }
 
 .card-product .card-product-infos {
-  padding: 16px;
+  padding: 3px;
 }
 
 
