finish assassins view with seeding csv db

--- a/app/views/assassins/index.html.erb
+++ b/app/views/assassins/index.html.erb
@@ -4,10 +4,10 @@
     <% @assassins.each do |assassin| %>
       <div class="row">
         <div class="card-product col-3">
-          <img class src="https://res.cloudinary.com/dfdergjip/image/upload/v1684161888/development/r4u4dt7r0dtgykuq78ow9b67n06y.jpg" alt="Card image cap">
+          <%= cl_image_tag(assassin.photo.key) %>
+          <%# <img class src="" alt="Card image cap"> %>
           <div class="card-product-infos">
             <div class="div">
-              <%#= cl_image_tag @assassin.photo.key, height: 300, width: 400, crop: :fill, class: "card-img-top" %>
               <h2><%= assassin.name %></h2>
               <p><%= assassin.weapon %></p>
               <%= link_to "Find out more", assassin_path(assassin), class: "small-btn" %>
