Modified card design

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,22 +1,28 @@
-<div class="container mt-4">
+<div class="container mt-4" style="width: 60%;">
+  <h1>MY BOOKINGS</h1>
   <div class="row">
-    <div class="col-6">
+    <div class="col-12">
       <div class="card text-center" style="font-family: Boogaloo">
         <% @bookings.each do |booking| %>
           <div class="card-body">
-            <p>ASSASSIN NAME: <%= booking.assassin.name %></p>
-            <p>TARGET NAME: <%= booking.target_name %></p>
-            <p>TARGET LOCATION: <%= booking.target_location %></p>
-            <p>BOOKING STATUS: <%= booking.status %></p>
-            <p>DEADLINE: <%= booking.deadline %></p>
+            <div class="d-flex justify-content-center align-items-center">
+              <%= cl_image_tag booking.assassin.photo.key, width: 300, height: 200, crop: :fill %>
+              <div class="div"><br>
+                <p>ASSASSIN NAME:</span> <%= booking.assassin.name %></p>
+              <p>TARGET NAME: <%= booking.target_name %></p>
+              <p>TARGET LOCATION: <%= booking.target_location %></p>
+              <p>BOOKING STATUS: <%= booking.status %></p>
+              <p>DEADLINE: <%= booking.deadline %></p>
+            </div>
           </div>
-          <div class="card-header">
-            <p>REQUEST FROM CLIENT:</p>
-            <p><%= booking.details %></p>
-          </div>
-        <% end %>
-      </div>
+        </div>
+        <div class="card-header">
+          <p>REQUEST FROM CLIENT:</p>
+          <p><%= booking.details %></p>
+        </div>
+      <% end %>
     </div>
   </div>
-  <%= link_to "BACK TO ALL ASSASSINS", assassins_path, class: "btn btn-dark mt-2"  %>
+</div>
+<%= link_to "BACK TO ALL ASSASSINS", assassins_path, class: "btn btn-dark mt-2"  %>
 </div>
