--- a/app/views/assassins/show.html.erb
+++ b/app/views/assassins/show.html.erb
@@ -1,6 +1,17 @@
-<h2>Name: <%= @assassin.name %></h2>
-<h3>Weapon : <%= @assassin.weapon %></h3>
-<h3>Rate: <%= @assassin.price %>bitcoin(s)💰</h3>
-<p>Some random thing about <%= @assassin.name %> : <br>
-  <%= @assassin.description %></p>
-<%#= cl_image_tag @assassin.photo.key, height: 300, width: 400, crop: :fill %>
+<div class="container" style="width:80%">
+  <h2><%= @assassin.name  %>'s PROFILE</h2>
+  <div class="cards-profile">
+    <div class="card-profile">
+      <%= cl_image_tag @assassin.photo.key, width: 350, height: 350, crop: :fill %>
+      <div class="card-profile-infos">
+        <h2 class='card-title'><span style="color:black">Name : </span><%= @assassin.name %></h2>
+        <h2 class='card-title'><span style="color:black">Weapon : </span><%= @assassin.weapon %></h2>
+        <h2 class='card-title'><span style="color:black">Rate : </span><%= @assassin.price %> <span style="color:black">bitcoin(s)💰</span></h2>
+        <a href="#" class="btn btn-dark">IGNITE THE CONTRACT</a>
+      </div>
+    </div>
+    <p>Some random thing about <%= @assassin.name %> : <br>
+      <%= @assassin.description %></p>
+  </div>
+  <%= link_to "BACK TO ALL ASSASSINS", assassins_path, class: "btn btn-dark" %>
+</div>
