--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-4" style="width: 60%;">
+<div class="container" style="width: 60%;">
   <h1>MY BOOKINGS</h1>
   <div class="row">
     <div class="col-12">
@@ -24,5 +24,5 @@
     </div>
   </div>
 </div>
-<%= link_to "BACK TO ALL ASSASSINS", assassins_path, class: "btn btn-dark mt-2"  %>
+<%= link_to "BACK TO ALL ASSASSINS", assassins_path, class: "btn btn-dark mt-2" %>
 </div>
