--- a/app/views/assassins/show.html.erb
+++ b/app/views/assassins/show.html.erb
@@ -7,7 +7,7 @@
         <h2 class='card-title'><span style="color:black">Name : </span><%= @assassin.name %></h2>
         <h2 class='card-title'><span style="color:black">Weapon : </span><%= @assassin.weapon %></h2>
         <h2 class='card-title'><span style="color:black">Rate : </span><%= @assassin.price %> <span style="color:black">bitcoin(s)💰</span></h2>
-        <a href="#" class="btn btn-dark">IGNITE THE CONTRACT</a>
+        <%# <a href="#" class="btn btn-dark">IGNITE THE CONTRACT</a> %>
       </div>
     </div>
     <p>Some random things about <%= @assassin.name %> : <br>
@@ -18,7 +18,7 @@
     <%= f.input :target_location %>
     <%= f.input :deadline, start_year: Date.current.year, end_year: Date.current.year + 5 %>
     <%= f.input :details, label: "Any requests?" %>
-    <%= f.submit "IGNITE THE CONTRACT", class: "btn btn-dark" %>
+    <%= f.submit "SUBMIT", class: "btn btn-dark" %>
   <% end %>
   <%= link_to "BACK TO ALL ASSASSINS", assassins_path, class: "btn btn-dark mt-2" %>
 </div>
