Just a small change on how the card looks on the booking page

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,3 +1,8 @@
+.card-container {
+  margin-bottom: 1.5rem; /* Adjust the margin value as needed */
+  font-size: larger;
+}
+
 .cards {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
