--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: rgb(55, 54, 54);
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -8,5 +8,14 @@
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 40px;
+  width: 80px;
+  margin-left: 8px;
+
+}
+
+.navbar-lewagon .navbar-nav .nav-link {
+  color: rgb(239, 234, 234);
+  font-size: 20px;
+  margin-right: 24px;
+
 }
