--- a/app/views/assassins/show.html.erb
+++ b/app/views/assassins/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container" style="width:80%">
+<div class="container" style="width:80%" data-controller="bookingform">
   <h2><%= @assassin.name  %>'s PROFILE</h2>
   <div class="cards-profile">
     <div class="card-profile">
@@ -7,18 +7,12 @@
         <h2 class='card-title'><span style="color:black">Name : </span><%= @assassin.name %></h2>
         <h2 class='card-title'><span style="color:black">Weapon : </span><%= @assassin.weapon %></h2>
         <h2 class='card-title'><span style="color:black">Rate : </span><%= @assassin.price %> <span style="color:black">bitcoin(s)💰</span></h2>
-        <%# <a href="#" class="btn btn-dark">IGNITE THE CONTRACT</a> %>
+        <button id='btnBook' class="btn btn-dark" data-action="bookingform#showTargets">IGNITE THE CONTRACT</button>
       </div>
     </div>
     <p>Some random things about <%= @assassin.name %> : <br>
       <%= @assassin.description %></p>
   </div>
-  <%= simple_form_for [@assassin, @booking] do |f| %>
-    <%= f.input :target_name %>
-    <%= f.input :target_location %>
-    <%= f.input :deadline, start_year: Date.current.year, end_year: Date.current.year + 5 %>
-    <%= f.input :details, label: "Any requests?" %>
-    <%= f.submit "SUBMIT", class: "btn btn-dark" %>
-  <% end %>
   <%= link_to "BACK TO ALL ASSASSINS", assassins_path, class: "btn btn-dark mt-2" %>
+  <%= render "shared/form" %>
 </div>
