--- a/app/views/assassin/bookings/index.html.erb
+++ b/app/views/assassin/bookings/index.html.erb
@@ -1,4 +1,19 @@
 <div class="container">
+	<h2><%= @assassin.name  %>'s PROFILE</h2>
+	<div class="cards-profile">
+		<div class="card-profile">
+			<%= cl_image_tag @assassin.photo.key, width: 350, height: 350, crop: :fill %>
+			<div class="card-profile-infos">
+				<h2 class='card-title'><span style="color:black">Name : </span><%= @assassin.name %></h2>
+				<h2 class='card-title'><span style="color:black">Weapon : </span><%= @assassin.weapon %></h2>
+				<h2 class='card-title'><span style="color:black">Rate : </span><%= @assassin.price %> <span style="color:black">bitcoin(s)💰</span></h2>
+				<%# <a href="#" class="btn btn-dark">IGNITE THE CONTRACT</a> %>
+			</div>
+		</div>
+		<p>Some random things about <%= @assassin.name %> : <br>
+			<%= @assassin.description %></p>
+	</div>
+
 	<h1>Assassin's Bookings</h1>
 	<% @bookings.each do |booking| %>
 
