--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container" style="position: relative;">
+  <h1 span style="font-family: Boogaloo">
+    Welcome to the clandestine realm of our elite assassin marketplace. Enter a world where shadows hold secrets and contracts come to life. Our platform connects those in need with the most formidable and precise assassins the underworld has to offer. From covert operations to calculated eliminations, our skilled professionals operate with a level of finesse that surpasses imagination. Immerse yourself in a realm of darkness, where whispers of revenge and justice intertwine. With strict confidentiality and a commitment to discretion, our marketplace unlocks the door to a realm where desires meet expertise. Explore our curated selection of exceptional assassins and embark on a journey that defies the ordinary. Dare you ignite the contract?
+  </h1>
+  <div class="blood-pouring" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; z-index: -1; background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgQq5rgcl-XY2lkLYF8RufXIjlvqjhYTA87g&usqp=CAU'); background-size: cover; opacity: 0.8;"></div>
+</div>
