--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,38 +1,42 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <div class="container-fluid">
-    <%= link_to root_path, class: "navbar-brand" do %>
-      <%= image_tag "https://png.pngtree.com/png-clipart/20211018/ourmid/pngtree-blood-red-dripping-three-dimensional-realism-png-image_3975934.png" %>
-    <% end %>
+	<div class="container-fluid">
+		<%= link_to root_path, class: "navbar-brand" do %>
+			<%= image_tag "https://png.pngtree.com/png-clipart/20211018/ourmid/pngtree-blood-red-dripping-three-dimensional-realism-png-image_3975934.png" %>
+		<% end %>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
-        <% if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "Home", root_path, class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "See All Assassins", assassins_path, class: "nav-link" %>
-          </li>
-          <li class="nav-item dropdown">
-          <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <%= image_tag "https://thypix.com/wp-content/uploads/2022/08/hacker-avatar-profile-picture-thypix-85.jpg", class: "avatar", alt: "dropdown menu" %>
-          </a>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "See Your Bookings", bookings_path, class: "dropdown-item" %>
-              <%= link_to "Become an assassin", "assassins_create_path", class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
-            </div>
-          </li>
-        <% else %>
-          <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-          </li>
-        <% end %>
-      </ul>
-    </div>
-  </div>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav me-auto">
+				<% if user_signed_in? %>
+					<li class="nav-item active">
+						<%= link_to "Home", root_path, class: "nav-link" %>
+					</li>
+					<li class="nav-item">
+						<%= link_to "See All Assassins", assassins_path, class: "nav-link" %>
+					</li>
+					<li class="nav-item dropdown">
+						<a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							<%= image_tag "https://thypix.com/wp-content/uploads/2022/08/hacker-avatar-profile-picture-thypix-85.jpg", class: "avatar", alt: "dropdown menu" %>
+						</a>
+						<div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+							<%= link_to "See Your Bookings", bookings_path, class: "dropdown-item" %>
+							<% if current_user.assassin.nil?%>
+								<%= link_to "Become an assassin", new_assassin_path, class: "dropdown-item" %>
+							<% else %>
+								<%= link_to "My assassin bookings", assassin_my_a_bookings_path, class: "dropdown-item" %>
+							<% end %>
+							<%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+						</div>
+					</li>
+				<% else %>
+					<li class="nav-item">
+						<%= link_to "Login", new_user_session_path, class: "nav-link" %>
+					</li>
+				<% end %>
+			</ul>
+		</div>
+	</div>
 </div>
