--- a/app/views/assassin/bookings/index.html.erb
+++ b/app/views/assassin/bookings/index.html.erb
@@ -15,7 +15,7 @@
 	</div>
 
 	<h1>Assassin's Bookings</h1>
-	<% @bookings.each do |booking| %>
+	<% @bookings.sort_by(&:status).each do |booking| %>
 
 		<div class="card text-center mb-4">
 			<div class="card-header">
@@ -26,19 +26,28 @@
 			<div class="card-body">
 				<h5 class="card-title">Assignment # <%= booking.id %></h5>
 				<p> Details:<%= booking.details %></p>
-				<p> Status:<%= booking.status %></p>
+
 				<% if booking.status =="Pending" %>
 					<td><%#= link_to 'Accept', booking_path(booking), method: :patch, class: 'btn btn-primary' %></td>
 					<%= form_for [:assassin, booking] do |t| %>
+          	<p> Status:<%= booking.status %></p>
 						<%= t.hidden_field :status, :value=>"Accepted" %>
 						<%= t.submit "Accept the Job", class: 'btn btn-primary' %>
+					<% end %>
+          <td><%#= link_to 'Accept', booking_path(booking), method: :patch, class: 'btn btn-primary' %></td>
+					<%= form_for [:assassin, booking] do |t| %>
+						<%= t.hidden_field :status, :value=>"Declined" %>
+						<%= t.submit "Decline the Job", class: 'btn btn-warning mt-3' %>
 					<% end %>
 				<% elsif booking.status == "Accepted" %>
 					<td><%#= link_to 'Mark as Complete', booking_path(booking), method: :patch, class: 'btn btn-danger' %></td>
 					<%= form_for [:assassin, booking] do |t| %>
+          	<p> Status:<%= booking.status %></p>
 						<%= t.hidden_field :status, :value=>"Completed" %>
-						<%= t.submit "Kill Confirmed!", class: 'btn btn-danger' %>
+						<%= t.submit "Confirm Kill!", class: 'btn btn-danger' %>
 					<% end %>
+        <% elsif booking.status == "Declined" %>
+          <p class="fs-3">DECLINED</p>
 				<% else %>
 					<p class="fs-3">TARGET ELIMINATED</p>
 				<% end %>
