--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -6,7 +6,7 @@
 				<div class="card text-center card-container">
 					<div class="card-body">
 						<div class="d-flex justify-content-center align-items-center">
-							<%= cl_image_tag booking.assassin.photo.key, width: 300, height: 200, crop: :fill %>
+							<%= cl_image_tag booking.assassin.photo.key, height: 300, crop: :fill %>
 							<div class="details-container"><br>
 								<p>ASSASSIN NAME: <span style="color: #BE0000"><%= booking.assassin.name %></span></p>
 								<p>TARGET NAME: <span style="color: #BE0000"><%= booking.target_name %></span></p>
@@ -18,15 +18,17 @@
 					</div>
 					<div >
 						<% if booking.status == "Verify" || booking.status == "Completed"%>
-							<h1>hi</h1>
-							<% if !booking.photo.key.nil? %>
-								<p>PROOF:  <span style="color: #BE0000"><%= cl_image_tag booking.photo.key, alt: "proof" %></span></p>
+							<% if !booking.proof.key.nil? %>
+								<p>PROOF:</p>
+								<p><span style="color: #BE0000"><%= cl_image_tag booking.proof.key, alt: "proof", height: 300, crop: :fill %></span></p>
 							<% end %>
 							<% if booking.status == "Verify" %>
 								<%= form_for booking do |t| %>
 									<%= t.hidden_field :status, :value=>"Completed" %>
-									<%= t.submit "I Verified Job is Done", class: 'btn btn-primary' %>
+									<%= t.submit "I Verify the Job is Done", class: 'btn btn-primary' %>
 								<% end %>
+							<% elsif booking.status == "Completed" %>
+								<h2>Concluded</h2>
 							<% end %>
 						<% end %>
 					</div>
