--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>HireAssassin</title>
+    <link rel="icon" href="https://cdn.icon-icons.com/icons2/564/PNG/512/Horror_icon-icons.com_54174.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
