--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -28,11 +28,12 @@
   align-items: flex-end;
   position: relative;
 }
-.card-product img {
-  height: 150px;
-  width: 235px;
-  object-fit: cover;
-}
+// .card-product img {
+//   top:0;
+//   height: 150px;
+//   width: 235px;
+//   object-fit: cover;
+// }
 
 .card-product h2 {
   font-size: 25px;
