some minor changes for index page and show page

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -6,6 +6,7 @@
   position: relative;
   max-height: 350px; /* Adjust this value to your desired width */
   margin: 0 auto;
+  min-width: 600px;
 }
 
 .container {
