--- a/app/views/assassins/new.html.erb
+++ b/app/views/assassins/new.html.erb
@@ -1,12 +1,11 @@
 <h1>Tell me about you</h1>
 <div class="container">
-	<%= simple_form_for(@assassin) do |f| %>
-		<%= f.input :name %>
-		<%= f.input :weapon %>
-		<%= f.input :description, :as => :text %>
-		<%= f.input :price %>
-		<%= f.input :photo, as: :file %>
-		<%= f.submit %>
-	<% end %>
-
+  <%= simple_form_for(@assassin) do |f| %>
+    <%= f.input :name %>
+    <%= f.input :weapon %>
+    <%= f.input :description, :as => :text %>
+    <%= f.input :price %>
+    <%= f.input :photo, as: :file %>
+    <%= f.submit 'Ready to KILL!'%>
+  <% end %>
 </div>
