--- a/app/views/assassin/bookings/index.html.erb
+++ b/app/views/assassin/bookings/index.html.erb
@@ -1,69 +1,65 @@
 <div class="container">
-	<h2><%= @assassin.name  %>'s PROFILE</h2>
-	<div class="cards-profile">
-		<div class="card-profile">
-			<%= cl_image_tag @assassin.photo.key, width: 350, height: 350, crop: :fill %>
-			<div class="card-profile-infos">
-				<h2 class='card-title'><span style="color:black">Name : </span><%= @assassin.name %></h2>
-				<h2 class='card-title'><span style="color:black">Weapon : </span><%= @assassin.weapon %></h2>
-				<h2 class='card-title'><span style="color:black">Rate : </span><%= @assassin.price %> <span style="color:black">bitcoin(s)💰</span></h2>
-				<%# <a href="#" class="btn btn-dark">IGNITE THE CONTRACT</a> %>
-			</div>
-		</div>
-		<p>Some random things about <%= @assassin.name %> : <br>
-			<%= @assassin.description %></p>
-	</div>
-
-	<h1>Assassin's Bookings</h1>
-	<% @bookings.sort_by(&:status).each do |booking| %>
-
-		<div class="card text-center mb-4">
-			<div class="card-header">
-				Target Name: <%= booking.target_name %> <br>
-				<br>
-				Target Location: <%= booking.target_location %>
-			</div>
-			<div class="card-body">
-				<h5 class="card-title">Assignment # <%= booking.id %></h5>
-				<p> Details:<%= booking.details %></p>
-				<% if !booking.proof.key.nil? %>
-					<p>PROOF:</p>
-					<p><span style="color: #BE0000"><%= cl_image_tag booking.proof.key, alt: "proof", height: 300, crop: :fill %></span></p>
-				<% end %>
-
-				<% if booking.status =="Pending" %>
-					<td><%#= link_to 'Accept', booking_path(booking), method: :patch, class: 'btn btn-primary' %></td>
-					<%= form_for [:assassin, booking] do |t| %>
-						<p> Status:<%= booking.status %></p>
-						<%= t.hidden_field :status, :value=>"Accepted" %>
-						<%= t.submit "Accept the Job", class: 'btn btn-primary' %>
-					<% end %>
-					<td><%#= link_to 'Accept', booking_path(booking), method: :patch, class: 'btn btn-primary' %></td>
-					<%= simple_form_for [:assassin, booking] do |f| %>
-						<%= f.hidden_field :status, :value=>"Declined" %>
-						<%= f.submit "Decline the Job", class: 'btn btn-warning mt-3' %>
-					<% end %>
-				<% elsif booking.status == "Accepted" %>
-					<td><%#= link_to 'Mark as Complete', booking_path(booking), method: :patch, class: 'btn btn-danger' %></td>
-					<%= simple_form_for [:assassin, booking] do |f| %>
-						<p> Status:<%= booking.status %></p>
-						<%= f.hidden_field :status, :value=>"Verify" %>
-						<%= f.submit "Confirm Kill!", class: 'btn btn-danger' %>
-						<%= f.input :proof, as: :file, label: "Proof" %>
-					<% end %>
-				<% elsif booking.status == "Declined" %>
-					<p class="fs-3">DECLINED</p>
-				<% elsif booking.status == "Verify" %>
-					<p class="fs-3">TARGET ELIMINATED</p>
-					<p class="fs-3">Waiting for Verification</p>
-				<% else %>
-					<p class="fs-3">TARGET ELIMINATED</p>
-					<p class="fs-3">Client Verified</p>
-				<% end %>
-			</div>
-			<div class="card-footer text-muted">
-				Due Date: <%= booking.deadline %>
-			</div>
-		</div>
-
-	<% end %>
+  <h2><%= @assassin.name  %>'s PROFILE</h2>
+  <div class="cards-profile">
+    <div class="card-profile">
+      <%= cl_image_tag @assassin.photo.key, width: 350, height: 350, crop: :fill %>
+      <div class="card-profile-infos">
+        <h2 class='card-title'><span style="color:black">Name : </span><%= @assassin.name %></h2>
+        <h2 class='card-title'><span style="color:black">Weapon : </span><%= @assassin.weapon %></h2>
+        <h2 class='card-title'><span style="color:black">Rate : </span><%= @assassin.price %> <span style="color:black">bitcoin(s)💰</span></h2>
+        <%# <a href="#" class="btn btn-dark">IGNITE THE CONTRACT</a> %>
+      </div>
+    </div>
+    <p>Some random things about <%= @assassin.name %> : <br>
+      <%= @assassin.description %></p>
+  </div>
+  <h1>Assassin's Bookings</h1>
+  <% @bookings.sort_by(&:status).each do |booking| %>
+    <div class="card text-center mb-4">
+      <div class="card-header">
+        Target Name: <%= booking.target_name %> <br>
+        <br>
+        Target Location: <%= booking.target_location %>
+      </div>
+      <div class="card-body">
+        <h3 class="card-title">Assignment # <%= booking.id %></h3>
+        <p> Details:<%= booking.details %></p>
+        <% if !booking.proof.key.nil? %>
+          <p>PROOF:</p>
+          <p><span style="color: #BE0000"><%= cl_image_tag booking.proof.key, alt: "proof", height: 300, crop: :fill %></span></p>
+        <% end %>
+        <% if booking.status =="Pending" %>
+          <td><%#= link_to 'Accept', booking_path(booking), method: :patch, class: 'btn btn-primary' %></td>
+          <%= form_for [:assassin, booking] do |t| %>
+            <p> Status:<%= booking.status %></p>
+            <%= t.hidden_field :status, :value=>"Accepted" %>
+            <%= t.submit "Accept the Job", class: 'btn btn-primary' %>
+          <% end %>
+          <td><%#= link_to 'Accept', booking_path(booking), method: :patch, class: 'btn btn-primary' %></td>
+          <%= simple_form_for [:assassin, booking] do |f| %>
+            <%= f.hidden_field :status, :value=>"Declined" %>
+            <%= f.submit "Decline the Job", class: 'btn btn-warning mt-3' %>
+          <% end %>
+        <% elsif booking.status == "Accepted" %>
+          <td><%#= link_to 'Mark as Complete', booking_path(booking), method: :patch, class: 'btn btn-danger' %></td>
+          <%= simple_form_for [:assassin, booking] do |f| %>
+            <p> Status:<%= booking.status %></p>
+            <%= f.hidden_field :status, :value=>"Verify" %>
+            <%= f.submit "Confirm Kill!", class: 'btn btn-danger' %>
+            <%= f.input :proof, as: :file, label: "Proof (optional)" %>
+          <% end %>
+        <% elsif booking.status == "Declined" %>
+          <p class="fs-3">DECLINED</p>
+        <% elsif booking.status == "Verify" %>
+          <p class="fs-3">TARGET ELIMINATED</p>
+          <p class="fs-3">Waiting for Verification</p>
+        <% else %>
+          <p class="fs-3">TARGET ELIMINATED</p>
+          <p class="fs-3">Client Verified</p>
+        <% end %>
+      </div>
+      <div class="card-footer text-muted">
+        Due Date: <%= booking.deadline %>
+      </div>
+    </div>
+  <% end %>
