--- a/app/views/assassins/new.html.erb
+++ b/app/views/assassins/new.html.erb
@@ -4,7 +4,7 @@
     <%= f.input :name %>
     <%= f.input :weapon %>
     <%= f.input :description, :as => :text %>
-    <%= f.input :price %>
+    <%= f.input :price, input_html: { min: '0', step: 'any' } %>
     <%= f.input :photo, as: :file %>
     <%= f.submit 'Ready to KILL!'%>
   <% end %>
