--- a/app/views/assassins/show.html.erb
+++ b/app/views/assassins/show.html.erb
@@ -7,7 +7,7 @@
         <h2 class='card-title'><span style="color:black">Name : </span><%= @assassin.name %></h2>
         <h2 class='card-title'><span style="color:black">Weapon : </span><%= @assassin.weapon %></h2>
         <h2 class='card-title'><span style="color:black">Rate : </span><%= @assassin.price %> <span style="color:black">bitcoin(s)💰</span></h2>
-        <button id='btnBook' class="btn btn-dark" data-action="bookingform#showTargets">IGNITE THE CONTRACT</button>
+        <button id='btnBook' class="btn btn-dark" data-action="bookingform#showTargets">Make a Request</button>
       </div>
     </div>
     <p>Some random things about <%= @assassin.name %> : <br>
