--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -4,6 +4,6 @@
     <%= f.input :target_location %>
     <%= f.input :deadline, start_year: Date.current.year, end_year: Date.current.year + 5 %>
     <%= f.input :details, label: "Any requests?" %>
-    <%= f.submit "SUBMIT", class: "btn btn-dark" %>
+    <%= f.submit "IGNITE THE CONTRACT", class: "btn btn-dark" %>
   <% end %>
 </div>
