Changed Bookings View

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -104,6 +104,11 @@
   grid-gap: 30px;
 }
 
+// Cards for Booking
+.card-booking {
+  margin: 16px
+}
+
 .card-profile .card-profile-infos {
   padding: 16px;
 }
