--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,42 +1,24 @@
-<div class="container" style="width: 60%;">
+<div class="container"">
 	<h1>MY BOOKINGS</h1>
-	<div class="row">
-		<div class="col-12">
-			<% @bookings.each do |booking| %>
-				<div class="card text-center card-container">
-					<div class="card-body">
-						<div class="d-flex justify-content-center align-items-center">
-							<%= cl_image_tag booking.assassin.photo.key, height: 300, crop: :fill %>
-							<div class="details-container"><br>
-								<p>ASSASSIN NAME: <span style="color: #BE0000"><%= booking.assassin.name %></span></p>
-								<p>TARGET NAME: <span style="color: #BE0000"><%= booking.target_name %></span></p>
-								<p>TARGET LOCATION: <span style="color: #BE0000"><%= booking.target_location %></span></p>
-								<p>BOOKING STATUS: <span style="color: #BE0000"><%= booking.status %></span></p>
-								<p>DEADLINE: <span style="color: #BE0000"><%= booking.deadline %></span></p>
-							</div>
-						</div>
-					</div>
-					<div >
-						<% if booking.status == "Verify" || booking.status == "Completed"%>
-							<% if !booking.proof.key.nil? %>
-								<p>PROOF:</p>
-								<p><span style="color: #BE0000"><%= cl_image_tag booking.proof.key, alt: "proof", height: 300, crop: :fill %></span></p>
-							<% end %>
-							<% if booking.status == "Verify" %>
-								<%= form_for booking do |t| %>
-									<%= t.hidden_field :status, :value=>"Completed" %>
-									<%= t.submit "I Verify the Job is Done", class: 'btn btn-primary' %>
-								<% end %>
-							<% elsif booking.status == "Completed" %>
-								<h2>Concluded</h2>
-							<% end %>
-						<% end %>
-					</div>
-					<div class="card-header">
-						<p>MY REQUEST:</p>
-						<p><%= booking.details %></p>
-					</div>
-				</div>
+	<div class="cards-2column">
+		<div class="cards-booking-pending">
+			<h2>Waiting for assassin to accept</h2>
+			<% @bookings.select{|booking| booking.status == "Pending"}.each do |booking| %>
+				<%= render "bookingCard", booking: booking%>
+			<% end %>
+		</div>
+		<div class="cards-booking-active">
+			<h2>Active Requests</h2>
+			<% @bookings.select{|booking| booking.status == "Accepted" || booking.status == "Verify"}.sort_by(&:status).each do |booking| %>
+				<%= render "bookingCard", booking: booking%>
+			<% end %>
+		</div>
+	</div>
+	<div>
+		<div class="cards-booking-history">
+			<h2>Bookings history</h2>
+			<% @bookings.select{|booking| booking.status == "Completed"}.each do |booking| %>
+				<%= render "bookingCard", booking: booking%>
 			<% end %>
 		</div>
 	</div>
