--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,23 @@
 // Specific CSS for your home-page
+
+/* The hero image */
+.hero-image {
+  /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+  background-color: aqua;
+}
+
+.hero-text {
+  // width: 100%;
+  // height: 90%;
+  // position: relative;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), asset-url('landing_hero.jpg');
+  background-position: center;
+  // background-repeat: no-repeat;
+  background-size: cover;
+  padding: 300px 0;
+  text-align: center;
+  // top: 50%;
+  // left: 50%;
+  // transform: translate(-50%, -50%);
+  // color: white;
+}
