--- a/app/views/assassins/new.html.erb
+++ b/app/views/assassins/new.html.erb
@@ -1,4 +1,4 @@
-
+<%= render "shared/banner"%>
 <div class="container">
   <h1>Tell me about you</h1>
   <%= simple_form_for(@assassin) do |f| %>
@@ -9,5 +9,4 @@
     <%= f.input :photo, as: :file %>
     <%= f.submit 'Ready to KILL!'%>
   <% end %>
-
 </div>
