--- a/app/views/assassins/show.html.erb
+++ b/app/views/assassins/show.html.erb
@@ -1,3 +1,4 @@
+<%= render "shared/banner"%>
 <div class="container" style="width:80%" data-controller="bookingform">
   <h2><%= @assassin.name  %>'s PROFILE</h2>
   <div class="cards-profile">
@@ -6,13 +7,25 @@
       <div class="card-profile-infos">
         <h2 class='card-title'><span style="color:black">Name : </span><%= @assassin.name %></h2>
         <h2 class='card-title'><span style="color:black">Weapon : </span><%= @assassin.weapon %></h2>
-        <h2 class='card-title'><span style="color:black">Rate : </span><%= @assassin.price %> <span style="color:black">bitcoin(s)💰</span></h2>
+        <h2 class='card-title'><span style="color:black">Rating : </span><%= @score.round(2) %></h2>
+        <h2 class='card-title'><span style="color:black">Rate : </span><%= @assassin.price %> <span style="color:black">Bitcoin(s)</span></h2>
         <button id='btnBook' class="btn btn-dark" data-action="bookingform#showTargets">HIRE ME!</button>
-
       </div>
     </div>
-    <p>Some random things about <%= @assassin.name %> : <br>
-      <%= @assassin.description %></p>
+    <div class="assassinDesc">
+      <p>Some random things about <%= @assassin.name %> : <br>
+        <%= @assassin.description %></p>
+    </div>
+    <div class="review">
+      <h5>Some reviews from the previous jobs</h5>
+      <% @assassin.bookings.each do |booking| %>
+        <% if booking.review.present? %>
+          <ul>
+            <li><%= booking.review%></li>
+          </ul>
+        <% end %>
+      <% end %>
+    </div>
   </div>
   <%= link_to "BACK TO ALL ASSASSINS", assassins_path, class: "btn btn-dark mt-2" %>
   <%= render "shared/form" %>
