--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,28 +1,28 @@
-<div class="container"">
-	<h1>MY BOOKINGS</h1>
-	<div class="cards-2column">
-		<div class="cards-booking-pending">
-			<h2>Waiting for assassin to accept</h2>
-			<% @bookings.select{|booking| booking.status == "Pending"}.each do |booking| %>
-				<%= render "bookingCard", booking: booking%>
-			<% end %>
-		</div>
-		<div class="cards-booking-active">
-			<h2>Active Requests</h2>
-			<% @bookings.select{|booking| booking.status == "Accepted" || booking.status == "Verify"}.sort_by(&:status).each do |booking| %>
-				<%= render "bookingCard", booking: booking%>
-			<% end %>
-		</div>
-	</div>
-	<div>
-		<div class="cards-booking-history">
-			<h2>Bookings history</h2>
-			<% @bookings.select{|booking| booking.status == "Completed"}.each do |booking| %>
-				<%= render "bookingCard", booking: booking%>
-			<% end %>
-		</div>
-	</div>
+<%= render "shared/banner"%>
+<div class="container">
+  <h1>MY BOOKINGS</h1>
+  <div class="cards-2column">
+    <div class="cards-booking-pending">
+      <h2>Waiting for assassin to accept</h2>
+      <% @bookings.select{|booking| booking.status == "Pending"}.each do |booking| %>
+        <%= render "bookingCard", booking: booking%>
+      <% end %>
+    </div>
+    <div class="cards-booking-active">
+      <h2>Active Requests</h2>
+      <% @bookings.select{|booking| booking.status == "Accepted" || booking.status == "Verify"}.sort_by(&:status).each do |booking| %>
+        <%= render "bookingCard", booking: booking%>
+      <% end %>
+    </div>
+  </div>
+  <div>
+    <div class="cards-booking-history">
+      <h2>Bookings history</h2>
+      <% @bookings.select{|booking| booking.status == "Completed"}.each do |booking| %>
+        <%= render "bookingCard", booking: booking%>
+      <% end %>
+    </div>
+  </div>
   <%= link_to "BACK TO ALL ASSASSINS", assassins_path, class: "btn btn-dark mt-2" %>
 </div>
-
 </div>
