adding assassing booking

--- a/app/views/assassin/bookings/index.html.erb
+++ b/app/views/assassin/bookings/index.html.erb
@@ -15,6 +15,17 @@
 	</div>
 
 	<h1>Assassin's Bookings</h1>
+    <div class="row justify-content-center">
+      <div class="col-sm-8 my-3">
+        <%= form_with url: assassin_my_a_bookings_path, method: :get, class: "d-flex" do %>
+        <%= text_field_tag :query,
+              params[:query],
+              class: "form-control",
+              placeholder: "Find Your Assassin"%>
+          <%= submit_tag "Search", name: "", class: "btn btn-dark" %>
+        <% end %>
+      </div>
+    </div>
 	<div class="cards-2column mt-4">
 		<div class="cards-booking-pending">
 			<h2>New Jobs</h2>
