--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,7 +19,11 @@
 					</li>
 					<li class="nav-item dropdown">
 						<a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							<%= image_tag "https://thypix.com/wp-content/uploads/2022/08/hacker-avatar-profile-picture-thypix-85.jpg", class: "avatar", alt: "dropdown menu" %>
+							<% if current_user.assassin.nil? %>
+								<%= image_tag "https://thypix.com/wp-content/uploads/2022/08/hacker-avatar-profile-picture-thypix-85.jpg", class: "avatar", alt: "dropdown menu" %>
+							<% else %>
+								<%= cl_image_tag current_user.assassin.photo.key, alt: "dropdown menu", class: "avatar", crop: :thumb, gravity: :faces, height: 40, width: 40 %>
+							<% end %>
 						</a>
 						<div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
 							<%= link_to "See Your Bookings", bookings_path, class: "dropdown-item" %>
