--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>HireAssassin</title>
-    <link rel="icon" href="https://cdn.icon-icons.com/icons2/564/PNG/512/Horror_icon-icons.com_54174.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
-  </head>
-  <body>
-    <%= render "shared/navbar"%>
-    <%= yield %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-  </body>
+	<head>
+		<title>HireAssassin</title>
+		<link rel="icon" href="https://cdn.icon-icons.com/icons2/564/PNG/512/Horror_icon-icons.com_54174.png">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<%= csrf_meta_tags %>
+		<%= csp_meta_tag %>
+		<%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+		<%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+	</head>
+	<body>
+		<%= render "shared/navbar"%>
+		<%= yield %>
+		<%= render "shared/flashes" %>
+	</body>
 </html>
