--- a/app/views/assassins/show.html.erb
+++ b/app/views/assassins/show.html.erb
@@ -8,11 +8,11 @@
         <h2 class='card-title'><span style="color:black">Name : </span><%= @assassin.name %></h2>
         <h2 class='card-title'><span style="color:black">Weapon : </span><%= @assassin.weapon %></h2>
         <h2 class='card-title'><span style="color:black">Rating : </span><%= @score.round(2) %></h2>
-        <h2 class='card-title'><span style="color:black">Rate : </span><%= @assassin.price %> <span style="color:black">Bitcoin(s)</span></h2>
+        <h2 class='card-title'><span style="color:black">Rate : </span><%= @assassin.price %> <span style="color:black"> 💰Bitcoin(s)</span></h2>
         <button id='btnBook' class="btn btn-dark" data-action="bookingform#showTargets">HIRE ME!</button>
       </div>
     </div>
-    <div class="assassinDesc">
+    <div class="assassin-desc">
       <p>Some random things about <%= @assassin.name %> : <br>
         <%= @assassin.description %></p>
     </div>
