/assassin/bookings - Added borders around each card

--- a/app/views/assassin/bookings/_jobCard.html.erb
+++ b/app/views/assassin/bookings/_jobCard.html.erb
@@ -1,4 +1,4 @@
-<div class="card-booking text-center">
+<div class="card card-booking text-center">
 	<div class="card-header">
 		Target Name: <%= booking.target_name %> <br>
 		<br>
