fixed the routes and the form partial and the profile card

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,7 +1,8 @@
 .bookingform {
   font-size: 20px;
   margin-top: 30px;
-  position: absolute;
+  margin-bottom: 30px;
+  position: inherit;
   left: 18%;
   width: 50%;
 }
