--- a/app/views/assassins/show.html.erb
+++ b/app/views/assassins/show.html.erb
@@ -1,32 +1,15 @@
 <%= render "shared/banner"%>
 <div class="container" style="width:80%" data-controller="bookingform">
-  <h2><%= @assassin.name  %>'s PROFILE</h2>
-  <div class="cards-profile">
-    <div class="card-profile">
-      <%= cl_image_tag @assassin.photo.key, width: 350, height: 350, crop: :fill, gravity: :faces %>
-      <div class="card-profile-infos">
-        <h2 class='card-title'><span style="color:black">Name : </span><%= @assassin.name %></h2>
-        <h2 class='card-title'><span style="color:black">Weapon : </span><%= @assassin.weapon %></h2>
-        <h2 class='card-title'><span style="color:black">Rating : </span><%= @score.round(2) %></h2>
-        <h2 class='card-title'><span style="color:black">Rate : </span><%= @assassin.price %> <span style="color:black"> 💰Bitcoin(s)</span></h2>
-        <button id='btnBook' class="btn btn-dark" data-action="bookingform#showTargets">HIRE ME!</button>
-      </div>
-    </div>
-    <div class="assassin-desc">
-      <p>Some random things about <%= @assassin.name %> : <br>
-        <%= @assassin.description %></p>
-    </div>
-    <div class="review">
-      <h5>Some reviews from the previous jobs</h5>
-      <% @assassin.bookings.each do |booking| %>
-        <% if booking.review.present? %>
-          <ul>
-            <li><%= booking.review%></li>
-          </ul>
-        <% end %>
+  <%= render "shared/profileCard"%>
+  <div class="review">
+    <h5>Some reviews from the previous jobs</h5>
+    <% @assassin.bookings.each do |booking| %>
+      <% if booking.review.present? %>
+        <ul>
+          <li><%= booking.review%></li>
+        </ul>
       <% end %>
-    </div>
+    <% end %>
   </div>
   <%= link_to "BACK TO ALL ASSASSINS", assassins_path, class: "btn btn-dark mt-2" %>
-  <%= render "shared/form" %>
 </div>
