--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,18 +1,17 @@
-
 <%= render "shared/banner"%>
 <div class="container">
 	<h1>MY BOOKINGS</h1>
-    <div class="row justify-content-center">
-      <div class="col-sm-8 my-3">
-        <%= form_with url: bookings_path, method: :get, class: "d-flex" do %>
-        <%= text_field_tag :query,
+	<div class="row justify-content-center">
+		<div class="col-sm-8 my-3">
+			<%= form_with url: bookings_path, method: :get, class: "d-flex" do %>
+				<%= text_field_tag :query,
               params[:query],
               class: "form-control",
               placeholder: "Find Your Bookings"%>
-          <%= submit_tag "Search", name: "", class: "btn btn-dark" %>
-        <% end %>
-      </div>
-    </div>
+				<%= submit_tag "Search", name: "", class: "btn btn-dark" %>
+			<% end %>
+		</div>
+	</div>
 	<div class="cards-2column">
 		<div class="cards-booking-pending">
 			<h2>Waiting for assassin to accept</h2>
@@ -30,11 +29,11 @@
 	<div>
 		<div class="cards-booking-history">
 			<h2>Bookings history</h2>
-			<% @bookings.select{|booking| booking.status == "Completed"}.each do |booking| %>
+			<% @bookings.select{|booking| booking.status == "Completed" || booking.status == "Declined" }.each do |booking| %>
 				<%= render "bookingCard", booking: booking%>
 			<% end %>
 		</div>
 	</div>
-  <%= link_to "BACK TO ALL ASSASSINS", assassins_path, class: "btn btn-dark mt-2" %>
+	<%= link_to "BACK TO ALL ASSASSINS", assassins_path, class: "btn btn-dark mt-2" %>
 </div>
 </div>
