--- a/app/views/bookings/_bookingCard.html.erb
+++ b/app/views/bookings/_bookingCard.html.erb
@@ -24,6 +24,40 @@
 				<% end %>
 			<% elsif booking.status == "Completed" %>
 				<h2>Concluded</h2>
+				<% if booking.rating.nil? %>
+					<!-- Button trigger modal -->
+					<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#writeReview">
+						Write a review
+					</button>
+
+					<!-- Modal -->
+					<div class="modal fade" id="writeReview" tabindex="-1" aria-labelledby="writeReviewLabel" aria-hidden="true">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h1 class="modal-title fs-5" id="writeReviewLabel">Review</h1>
+									<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+								</div>
+								<%= simple_form_for(booking) do |f| %>
+									<div class="modal-body">
+										<%= f.input :rating %>
+										<%= f.input :review, as: :text %>
+
+									</div>
+									<div class="modal-footer">
+										<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+										<%= f.submit 'Save review', class: "btn btn-primary" %>
+									</div>
+								<% end %>
+							</div>
+						</div>
+					</div>
+				<% else %>
+					<div>
+						<p>Rating: <%= booking.rating %></p>
+						<p>Review: <%= booking.review %></p>
+					</div>
+				<% end %>
 			<% elsif booking.status == "Declined" %>
 				<h2>Rejected</h2>
 			<% end %>
