Fixed map code probably

--- a/app/views/assassin/bookings/_jobCard.html.erb
+++ b/app/views/assassin/bookings/_jobCard.html.erb
@@ -4,7 +4,7 @@
     <br>
     Target Location: <%= booking.target_location %>
     <div class="map-container" id="map-container-<%= booking.id %>">
-      <%= render "bookings/booking_map", booking: booking %>
+      <%= render "bookings/booking_map_for_assassins", booking: booking %>
     </div>
   </div>
 </div>
